--- a/inboundapp/public/style.css
+++ b/inboundapp/public/style.css
@@ -11,6 +11,24 @@ body {
     color: #fff;
 }
 
+body:after{
+    content: "beta";
+    position: fixed;
+    width: 80px;
+    height: 25px;
+    background: red;
+    top: 7px;
+    left: -20px;
+    text-align: center;
+    font-size: 13px;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fff;
+    line-height: 27px;
+    transform:rotate(-45deg);
+  }
+
 main {
     height: 100vh;
     padding: 1rem;
